ready for work